created javascript file

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 <div class= "big-blue circle"> This is a circle </div>
 <div class =" small-green circle"> Circle numero dos </div>
 
+<script src=js/scripts.js></script>
+
+
+
+
+ </script>
+
 </body>
 
 </html>
